// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton Snapshots ID 1`] = `
<div
  className="sc-AxiKw deZmix"
>
  <input
    className="sc-AxjAm cxcmXo"
    defaultChecked={false}
    disabled={false}
    id="ID"
    onChange={null}
    type="radio"
    value=""
  />
  <label
    className="sc-AxirZ DKObq"
    htmlFor="ID"
  >
    RadioButton
  </label>
</div>
`;

exports[`RadioButton Snapshots No children 1`] = `
<div
  className="sc-AxiKw deZmix"
>
  <input
    className="sc-AxjAm cxcmXo"
    defaultChecked={false}
    disabled={false}
    id="ID"
    onChange={null}
    type="radio"
    value=""
  />
  <label
    className="sc-AxirZ DKObq"
    htmlFor="ID"
  />
</div>
`;

exports[`RadioButton Snapshots No props 1`] = `
<div
  className="sc-AxiKw deZmix"
>
  <input
    className="sc-AxjAm cxcmXo"
    defaultChecked={false}
    disabled={false}
    onChange={null}
    type="radio"
    value=""
  />
  <label
    className="sc-AxirZ DKObq"
  >
    RadioButton
  </label>
</div>
`;

exports[`RadioButton Snapshots group 1`] = `
<div
  className="sc-AxiKw deZmix"
>
  <input
    className="sc-AxjAm cxcmXo"
    defaultChecked={false}
    disabled={false}
    id="ID"
    name="ID1"
    onChange={null}
    type="radio"
    value=""
  />
  <label
    className="sc-AxirZ DKObq"
    htmlFor="ID"
  >
    RadioButton
  </label>
</div>
`;
